changes to pom and other changes